@@ -12,7 +12,7 @@ module ActiveScaffold::Actions
       # FieldSearch uses params[:search] and not @record because search conditions do not always pass the Model's validations.
       # This facilitates for example, textual searches against associations via .search_sql
       def show_search
-        @record = new_model
+        @record = new_model(false)
         super
       end
 
